--- a/todolist/package.json
+++ b/todolist/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.13.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.9"
+    "nodemon": "^2.0.9",
+    "prettier": "2.3.2"
   }
 }
